--- a/css/footer.042715.1.scss
+++ b/css/footer.042715.1.scss
@@ -30,7 +30,7 @@ section.footer {
 
 	// NOTE:  The flexbox must go on .wrapper with your current structure
 	// .wrapper {
-	// 	@include flexboxSettings041715a;
+	// 	@include flexboxRow1;
 	// 	align-content: space-around;
 	// }
 }
@@ -43,7 +43,7 @@ section.footer aside.companyLogo .slash {
 // NOTE:  The flexbox must go on .wrapper with your current structure
 section.footer .wrapper {
 	//flexbox
-	@include flexboxSettings041715a;
+	@include flexboxRow1;
 	align-content: space-around;
 	// want the item tops to be aligned
 	align-items: flex-start;
@@ -85,7 +85,7 @@ section.footer aside.companyLogo {
 // QUICK LINK  ------------------------------------------------
 section.footer section.quickLink {
 	//flexbox
-	@include flexboxSettings042215a;
+	@include flexboxColumn1;
 	align-items:flex-start;
 
 	div.linkbox {
@@ -93,7 +93,7 @@ section.footer section.quickLink {
 		// margin-top: 11%;
 
 		//flexbox
-		@include flexboxSettings042215a;
+		@include flexboxColumn1;
 		align-items:flex-start;
 	}
 
@@ -119,7 +119,7 @@ section.footer section.quickLink {
 // RECENT BLOGS  ------------------------------------------------
 section.recentBlogs {
 	//flexbox
-	@include flexboxSettings042215a;
+	@include flexboxColumn1;
 	align-items:flex-start;
 
 
@@ -127,7 +127,7 @@ section.recentBlogs {
 	aside.blogHeadline {
 		width: 100%;
 		//flexbox
-		@include flexboxSettings041715a;
+		@include flexboxRow1;
 		justify-content: space-between;
 		align-content: space-between;
 		align-items:center;
@@ -235,12 +235,12 @@ section.recentBlogs {
 // TAGS  ------------------------------------------------
 section.tags {
 	//flexbox
-	@include flexboxSettings042215a;
+	@include flexboxColumn1;
 	align-items:flex-start;
 
 	div.tagBox {
 		//flexbox
-		@include flexboxSettings041715a;
+		@include flexboxRow1;
 		justify-content:flex-start;
 		align-content:flex-start;
 
@@ -269,7 +269,7 @@ section.tags {
 // CONTACT INFO  ------------------------------------------------
 section.contactinfo {
 	//flexbox
-	@include flexboxSettings042215a;
+	@include flexboxColumn1;
 	align-items:flex-start;
 
 	width: 100%;
@@ -282,7 +282,7 @@ section.contactinfo aside.socialIcons {
 	margin-bottom: 11%;
 
 	//flexbox
-	@include flexboxSettings041715a;
+	@include flexboxRow1;
 	justify-content: flex-start;
 	align-content: flex-start;
 
@@ -300,7 +300,7 @@ section.contactinfo aside.socialIcons {
 		background: $footerColourBackLink;
 
 		//flexbox
-		@include flexboxSettings041715a;
+		@include flexboxRow1;
 		justify-content:center;
 		align-content:center;
 
@@ -325,7 +325,7 @@ section.contactinfo aside.socialIcons {
 
 section.contactinfo aside.twitterEntry {
 	//flexbox
-	@include flexboxSettings041715a;
+	@include flexboxRow1;
 	justify-content: space-between;
 	align-content: space-between;
 	align-items: flex-start;
@@ -356,7 +356,7 @@ section.contactinfo aside.twitterEntry {
 		//flexbox
 		// to bring the p up to the top
 		// actually we need to set this on the flexbox on aside.twitterEntry
-		// @include flexboxSettings042215a;
+		// @include flexboxColumn1;
 		// align-items:flex-start;
 	}
 }
@@ -380,7 +380,7 @@ section.copyright {
 		padding-top: 0.5%;
 
 		//flexbox
-		@include flexboxSettings041715a;
+		@include flexboxRow1;
 		justify-content: space-between;
 		align-content: space-between;
 	}
@@ -411,7 +411,7 @@ section.copyright nav {
 	// using flex: 1 13% achieves the spacing we desire
 	
 	//flexbox
-	@include flexboxSettings041715a;
+	@include flexboxRow1;
 	justify-content: space-between;
 	align-content: space-between;
 
