--- a/css/mixins.project.scss
+++ b/css/mixins.project.scss
@@ -19,7 +19,7 @@
 	height: 2.4375em;
 
 	//flexbox
-	@include flexboxSettings042215a;
+	@include flexboxColumn1;
 	justify-content:center;
 	align-content: center;
 	align-items: center;
@@ -55,13 +55,13 @@
 
 	// this is the less accurate ::before technique where the slash is too thick
 	// &::before {
-	// 	@include slantSlash042815a1($themeYellow);
+	// 	@include slantSlash1($themeYellow);
 	// }
 }
 
 
 
-@mixin productDivDimensions042815a1 {
+@mixin productDivDimensions1 {
 	// width: 209px;
 	// height: 212px;
 	width: 13.0625em;
@@ -69,7 +69,7 @@
 	// border: 1px solid red;
 }
 
-@mixin productDivDimensions042815a2 ($colour) {
+@mixin productDivDimensions2 ($colour) {
 	// width: 209px;
 	// height: 212px;
 	width: 13.0625em;
@@ -77,7 +77,7 @@
 	border: 1px solid $colour;
 }
 
-@mixin backgroundImage042815a ($url) {
+@mixin backgroundImage1 ($url) {
 	background-image: url($url);
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -92,13 +92,13 @@
 	padding: 0;
 }
 
-@mixin colourSelect042915a {
+@mixin colourSelect1 {
 	// inserted into a div.colourSelect element
 	// a.colour1
 	// a.colour2
 	
 	//flexbox
-	@include flexboxSettings041715a;
+	@include flexboxRow1;
 	justify-content: space-around;
 	align-content: space-around;
 
@@ -146,7 +146,7 @@
 	}
 }
 
-@mixin pulsingBorder ($colour) {
+@mixin pulsingBorder1 ($colour) {
 	@-webkit-keyframes pulseBorder {
 		0% {
 			border: 1px solid $colour;
@@ -174,11 +174,11 @@
 ///// 		SHADERS
 ///////////////////////////////////////////////
 
-@mixin purchaseShader042815a1 {
+@mixin purchaseShader1 {
 	
 	div.purchaseShader {
 		//flexbox
-		@include flexboxSettings042215a;
+		@include flexboxColumn1;
 		justify-content: flex-end;
 		align-content: flex-end;
 		align-items: center;
@@ -257,18 +257,18 @@
 	}	
 }
 
-@mixin purchaseShaderDisplay042815a {
+@mixin purchaseShaderDisplay1 {
 	// requires that the parent element have the div.purchaseShader html inside already
 	&:hover > div.purchaseShader {
 		display: flex;
 	}
 }
 
-@mixin addToCartShader042915a {
+@mixin addToCartShader1 {
 
 	div.imgShader {
 		//flexbox
-		@include flexboxSettings042215a;
+		@include flexboxColumn1;
 		justify-content: flex-end;
 		align-content: flex-end;
 		align-items: center;
@@ -304,17 +304,10 @@
 	}	
 }
 
-@mixin addToCartShader042915b {
-
-	// html structure
-	// div.addToCartButton
-	// 	a(href='#').button
-	// 		div.button
-	// 			//- the div will hold the before element
-	// 			p.text Add to Cart
-
+@mixin addToCartShader2 {
+	
 	//flexbox
-	@include flexboxSettings042215a;
+	@include flexboxColumn1;
 	justify-content: flex-end;
 	align-content: flex-end;
 	align-items: center;
@@ -375,7 +368,7 @@
 ///////////////////////////////////////////////
 
 // the ::before version
-@mixin navSlantSlash042815a1 ($colour) {
+@mixin navSlantSlash1 ($colour) {
 	// PARENT  ------------------------------------------------
 	// to allow us to hook the slanted slash
 	// position: relative;
@@ -398,7 +391,7 @@
 }
 
 // the ::before version
-@mixin slantSlash042815a1 ($colour) {
+@mixin slantSlash1 ($colour) {
 	// PARENT  ------------------------------------------------
 	// to allow us to hook the slanted slash
 	// position: relative;
@@ -421,7 +414,7 @@
 }
 
 // the ::before version
-@mixin slantSlash042915a ($colour) {
+@mixin slantSlash2 ($colour) {
 	// PARENT  ------------------------------------------------
 	// to allow us to hook the slanted slash
 	// position: relative;
@@ -466,7 +459,7 @@
 }
 
 // Div version
-@mixin slantedSlash043015a {
+@mixin slantedSlash3 {
 	// this was the version used for the nav menu
 	// typically used for a div.slash
 	// you may have to use a very specific selector set or override any backgrounds or colour
