--- a/css/nav.042715.1.scss
+++ b/css/nav.042715.1.scss
@@ -41,7 +41,7 @@ header.navMenu section.banner {
 	.wrapper {
 		// place the flexbox here not in the parent of section.banner
 		//flex box
-		@include flexboxSettings041715a;
+		@include flexboxRow1;
 		justify-content: space-around;
 		align-content: space-around;
 		align-items: space-around;
@@ -60,13 +60,13 @@ header.navMenu section.banner {
 		}
 		&:nth-of-type(2) {
 			flex: 1 auto;
-			@include flexboxSettings041715a;
+			@include flexboxRow1;
 			justify-content: flex-end;
 			align-content: flex-end;
 		}
 		&:nth-of-type(3) {
 			flex: 1 auto;
-			@include flexboxSettings041715a;
+			@include flexboxRow1;
 			justify-content: flex-end;
 			align-content: flex-end;
 
@@ -90,7 +90,7 @@ header.navMenu section.banner {
 		}
 		&:nth-of-type(4) {
 			flex: 1 auto;
-			@include flexboxSettings041715a;
+			@include flexboxRow1;
 			justify-content: flex-start;
 			align-content: flex-start;
 
@@ -122,7 +122,7 @@ header.navMenu section.banner {
 
 		// 	// flexbox
 		// 	// apply flexbox to centre the icon
-		// 	// @include flexboxSettings042215a;
+		// 	// @include flexboxColumn1;
 		// }
 		
 		// add a hover state
@@ -261,7 +261,7 @@ header.navMenu nav {
 	}
 
 	ul {
-		@include flexboxSettings041715a;
+		@include flexboxRow1;
 		justify-content: center;
 		align-content: center;
 		justify-content: space-between;
@@ -283,7 +283,7 @@ header.navMenu nav {
 
 		//flexbox
 		// we need to centre all the a elements within the li's (even though they're inline blocks)
-		@include flexboxSettings041715a;
+		@include flexboxRow1;
 		justify-content: center;
 		align-content: center;
 
@@ -306,7 +306,7 @@ header.navMenu nav {
 		// @include iphone6Minus320R {
 		// 	//flexbox
 		// 	// we need to centre all the a elements within the li's (even though they're inline blocks)
-		// 	@include flexboxSettings041715a;
+		// 	@include flexboxRow1;
 		// 	justify-content: center;
 		// 	align-content: center;
 		// }
@@ -393,7 +393,7 @@ header.navMenu nav a {
 
 	// flexbox
 	// if using inline block
-	@include flexboxSettings041715a;
+	@include flexboxRow1;
 
 	@include desktopR {
 		// use padding to create button
