Setup Waypoints and Sticky Nav however the waypoints are somewhat glitchy or I need to set a better target.

--- a/css/style.scss
+++ b/css/style.scss
@@ -98,6 +98,14 @@ p {
 ///////////////////////////////////////////////
 
 ////////////////////////////////////////////
+///// 		SLIDE OUT SHOPPING CART
+///////////////////////////////////////////////
+
+@import 'slideOutShopCart.050115.1';
+
+///////////////////////////////////////////////
+
+////////////////////////////////////////////
 ///// 		NAV
 ///////////////////////////////////////////////
 
