--- a/css/typography.scss
+++ b/css/typography.scss
@@ -44,6 +44,9 @@ $footerColourBack: #060708;
 $footerColourBackLink: #1C1D1E;
 $footerColourBorder: #1D1E1F;
 
+// slide out shopping cart
+$slideOutCartTextShadow: #203A8B;
+
 // // END COLOURS ------------------------------------------------
 
 // BASE  ------------------------------------------------
