--- a/includes/nav.042715.1.jade
+++ b/includes/nav.042715.1.jade
@@ -4,7 +4,7 @@
 
 // this is the side wide primary navigation menu
 
-header.navMenu.nav042715
+header.navMenu
 	// BANNER STRIP AT THE TOP  ------------------------------------------------
 	// this is the section above the logo segment and includes the shopping cart
 	+banner1
@@ -25,7 +25,7 @@ header.navMenu.nav042715
 	
 	// NAVIGATION MENU  ------------------------------------------------
 	// this is the actual html for the navigation menu
-	nav
+	nav.primaryNav1
 		.wrapper		
 			ul
 				+linkTemplate033115a('New Arrivals',newArrivalsLink)
