--- a/includes/scripts.jade
+++ b/includes/scripts.jade
@@ -1,4 +1,13 @@
 // SCRIPTS
 script(type='text/javascript', src='https://code.jquery.com/jquery-2.1.3.min.js')
 //- script(type='text/javascript', src='./js/flat-ui.min.js')
+script(type='text/javascript', src='./js/jquery.sticky.js')
+script(type='text/javascript', src='./js/jquery-ui.min.js')
+	
+script(type='text/javascript', src='./js/jquery.gsap.min.js')
+script(type='text/javascript', src='./js/TweenMax.min.js')
+script(type='text/javascript', src='./js/Draggable.min.js')
+
+script(type='text/javascript', src='./js/jquery.waypoints.min.js')
+//- where your custom scripts file is always last
 script(type='text/javascript', src='./js/scripts.js')
