I've now changed the Javascript to use a for loop to set the animations on multiple elements using an array for the draggable ones. I created a separate class for the annoying New Arrivals Wardrobe Display block Right Bottom.

--- a/css/index.scss
+++ b/css/index.scss
@@ -427,14 +427,6 @@ section.newArrivals {
 			//flexbox
 			@include flexboxColumn1;
 
-			// div {
-			// 	//flex child
-			// 	// flex: 1 auto;
-			// 	width: 100%;
-			// 	position: relative;
-			// 	height: auto;
-			// }
-
 			// border: 3px dashed black;
 
 			// LEFT TOP RIGHT BOTH
@@ -605,12 +597,7 @@ section.newArrivals {
 			flex: 1 50%;
 			// margin: auto;
 
-			// @include iphone6Minus320R {
-			// 	//flex child
-			// 	flex: 1 100%;
-			// }
-
-
+			// TESTING
 			// border: 1px double aqua;
 			height: 13.25em;
 
