--- a/index.jade
+++ b/index.jade
@@ -169,7 +169,19 @@ block content
 					
 					// RIGHT BOTTOM  ------------------------------------------------
 					div.bottom.wardrobeDrag
-						div.left.wardrobeDrag
+						//- div.left.wardrobeDrag.specialDressDrag
+						//- 	//- dimensions 420x420px
+						//- 	div.top
+						//- 	div.bottom
+						//- 		div.copy
+						//- 			h3 Full Options
+						//- 			p.copy Body and Smiling
+						//- 			p.price $399
+						//- 		+purchaseShader1
+						//- div.right.wardrobeDrag.specialDressDrag
+						//- 	+purchaseShader1
+
+						div.left.specialDressDrag
 							//- dimensions 420x420px
 							div.top
 							div.bottom
@@ -178,7 +190,7 @@ block content
 									p.copy Body and Smiling
 									p.price $399
 								+purchaseShader1
-						div.right.wardrobeDrag
+						div.right.specialDressDrag
 							+purchaseShader1
 					// END RIGHT BOTTOM ------------------------------------------------
 					
