Got the draggable animations working however the Wardrobe right bottom doesn't trigger the draggable status for the aside shopping cart. The section.dressCollection collection entries work for some mysterious reason... is it because they use section elements while the Wardrobe uses only div? It might be worth some testing... i.e. converting the divs I want dragged into section html5 elements.

--- a/includes/mixins.project.041415.1.jade
+++ b/includes/mixins.project.041415.1.jade
@@ -154,20 +154,12 @@ mixin purchaseShader1
 			p.price
 				span $
 				| 99
-			a(href='#').button
+			a(href='javascript:void(0)').button
 				div.button
 					//- for the slanted slash
 					div.slash				
 					//- the div will hold the before element
 					p.text Add to Cart
-
-mixin purchaseShader2(priceVal)
-	if block
-		block
-	else
-		div.purchaseShader
-			p=priceVal
-			a(href="#") Add to Cart
 
 mixin addToCartButton1
 	if block
@@ -180,7 +172,7 @@ mixin addToCartButton1
 		//- 			p.text Add to Cart
 
 		div.addToCartButton
-			a(href='#').button
+			a(href='javascript:void(0)').button
 				div.button
 					//- for the slanted slash
 					div.slash
